# sc-payment-system-aiogram

./: .gitignore  LICENSE  README.md  pyproject.toml
bot/: db.py  main.py  states.py  texts.py  utils.py
bot/commands/: general.py  nonlogin.py  security.py  trades.py
bot/dbworks/: __init__.py  login.py  transactions.py  varied.py
